<resources>
    <string name="app_name">DemoProject</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="name_hint">Enter your Name</string>
    <string name="email_hint">Enter Email</string>
    <string name="age_hint">Enter Age</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="submit_text">SUBMIT</string>
    <string name="change_text">Browse Image</string>
    <string name="add_menu">Add User</string>
    <string name="view_image">View Image</string>
</resources>
