<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sabbir.admin.demoproject.activities.MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:src="@drawable/profile_pic"
            app:civ_border_width="2dp"
            android:layout_margin="10dp"
            app:civ_border_color="#FF000000"/>
        <Button
            android:gravity="right"
            android:id="@+id/btn_change"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
        android:id="@+id/id_name"
        android:hint="@string/name_hint"
        android:background="@drawable/edit_field_background"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="30dp" />

        <EditText
            android:id="@+id/id_age"
            android:inputType="number"
            android:hint="@string/age_hint"
            android:background="@drawable/edit_field_background"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/id_email"
            android:hint="@string/email_hint"
            android:background="@drawable/edit_field_background"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/id_number"
            android:inputType="number"
            android:hint="@string/phone_hint"
            android:background="@drawable/edit_field_background"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/id_btn_submit"
            android:background="@drawable/btn_background"
            android:text="@string/submit_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        
    </LinearLayout>

</LinearLayout>
